--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,15 @@
-# DON'T EDIT THIS!
-#
-# Codecrafters relies on this file being intact to run tests successfully. Any changes
-# here will not reflect when CodeCrafters tests your code, and might even cause build
-# failures.
-#
-# DON'T EDIT THIS!
 [package]
-name = "http-server-starter-rust"
+name = "cliud"
 version = "0.1.0"
-authors = ["Codecrafters <hello@codecrafters.io>"]
 edition = "2021"
 
-# DON'T EDIT THIS!
-#
-# Codecrafters relies on this file being intact to run tests successfully. Any changes
-# here will not reflect when CodeCrafters tests your code, and might even cause build
-# failures.
-#
-# DON'T EDIT THIS!
 [dependencies]
-anyhow = "1.0.59"                                   # error handling
-bytes = "1.3.0"                                     # helps manage buffers
-thiserror = "1.0.38"                                # error handling
-tokio = { version = "1.23.0", features = ["full"] } # async networking
-nom = "7.1.3"                                       # parser combinators
-itertools = "0.11.0"                                # General iterator helpers
+tokio = { version = "1", features = ["full"] }
+flate2 = "1"
+sha1_smol = "1"
+base64 = "0"
+colored = "2.1.0"
+tokio-tungstenite = "0.23.1"
+futures-channel = "0.3.30"
+futures-util = "0.3.30"
 lazy_static = "1.5.0"
-flate2 = "1.0.30"
-
-[dev-dependencies]
-pretty_assertions = "1.3.0"                         # nicer looking assertions
-
