--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,4 @@ flate2 = "1"
 sha1_smol = "1"
 base64 = "0"
 colored = "2.1.0"
-tokio-tungstenite = "0.23.1"
-futures-channel = "0.3.30"
-futures-util = "0.3.30"
-lazy_static = "1.5.0"
+thiserror = "1.0.63"
