--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "cliud"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-flate2 = "1"
-sha1_smol = "1"
-base64 = "0"
-colored = "2.1.0"
 thiserror = "1.0.63"
+colored = "2.1.0"
+flate2 = "1.1.5"
+sha1_smol = "1.0.1"
+base64 = "0.22.1"
+percent-encoding = "2.3.2"
