--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+
+# Utility
+dotenv = "0.15.0"
 async-trait = "0.1.89"
 thiserror = "1.0.63"
 colored = "2.1.0"
+
+# Coding
 flate2 = "1.1.5"
 base64 = "0.22.1"
 sha1_smol = "1.0.1"
